# generator-pypi

./: .gitignore  README.md  package.json  tsconfig.json
generators/app/: index.js
generators/app/templates/: README.md  package.json  pyproject.toml
generators/app/templates/jsw_nx/: __init__.py
generators/cli/: index.js
generators/cli/templates/: README.md  package.json  pyproject.toml
