[tool.poetry]
name = "<%= project_name %>"
version = "1.0.0"
description = "<%= description %>"
authors = ["<%= author %> <<%= email %>>"]
license = "MIT"

[tool.poetry.scripts]
<%= project_name %> = "jsw_nx.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
python-gitlab = "^3.5.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
jsw-nx = "^1.0.102"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
